# haskell-practice

./: FunctorDerivations.hs  README.md  State.hs  Turnstile.hs  TurnstileState1.hs  TurnstileState2.hs  haskell-state-monad-exercises.cabal
monad-transformers/: README.md  monad-transformers.cabal
monad-transformers/src/: Practice.hs
src/: Dice.hs  RandomTurnstileState.hs  Turnstile.hs  TurnstileState1.hs  TurnstileState2.hs
state-monad/: README.md  state-monad.cabal
state-monad/src/: State.hs
