cabal-version:      3.4
name:               haskell-state-monad-exercises
version:            0.1.0.0
license:            NONE
build-type:         Simple
extra-doc-files:    CHANGELOG.md
-- extra-source-files:

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:
      State
      Turnstile
      TurnstileState1
      TurnstileState2
    -- other-modules:
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   src
    default-language: GHC2021
