cabal-version:      3.4
name:               monad-transformers
version:            0.1.0.0
license:            NONE
build-type:         Simple

common warnings
    ghc-options: -Wall

library
    import:           warnings
    -- exposed-modules:  MyLib
    build-depends:
      base ^>=4.16.4.0,
      mtl ^>=2.3.1
    hs-source-dirs:   src
    default-language: GHC2021
